更改原生menu字体样式

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,13 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="actionMenuTextColor">#fcfcfc</item>
+        <item name="android:actionMenuTextAppearance">@style/ReadingMenuTextStyle</item>
+        <item name="actionMenuTextAppearance">@style/ReadingMenuTextStyle</item>
+    </style>
+
+    <style name="ReadingMenuTextStyle">
+        <item name="android:textColor">#fcfcfc</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
