--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="actionMenuTextColor">#fcfcfc</item>
         <item name="android:actionMenuTextAppearance">@style/ReadingMenuTextStyle</item>
         <item name="actionMenuTextAppearance">@style/ReadingMenuTextStyle</item>
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="colorPrimaryDark">#3e9ce9</item>
     </style>
 
     <style name="ReadingMenuTextStyle">
